--- a/archives/toutiao-search/2024-02-01.md
+++ b/archives/toutiao-search/2024-02-01.md
@@ -1,51 +1,65 @@
 # 2024-02-01
 
-共 101 条
+共 115 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 01 2024 07:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Feb 01 2024 08:26:22 GMT+0800 (China Standard Time) -->
 1. [农村办席被工作人员往食物中撒盐](https://so.toutiao.com/search?keyword=农村办席被工作人员往食物中撒盐)
-1. [刘德华也无法避免沟通困境](https://so.toutiao.com/search?keyword=刘德华也无法避免沟通困境)
+1. [郑州3万人连夜除雪 直击雪后早高峰](https://so.toutiao.com/search?keyword=郑州3万人连夜除雪+直击雪后早高峰)
 1. [一次打卡中国空间站多种科学实验设备](https://so.toutiao.com/search?keyword=一次打卡中国空间站多种科学实验设备)
 1. [姐弟坠亡案共谋作案聊天记录曝光](https://so.toutiao.com/search?keyword=姐弟坠亡案共谋作案聊天记录曝光)
 1. [河南暴雪开始了](https://so.toutiao.com/search?keyword=河南暴雪开始了)
+1. [刘德华也无法避免沟通困境](https://so.toutiao.com/search?keyword=刘德华也无法避免沟通困境)
 1. [官方回应消防栓没水致男子母亲呛死](https://so.toutiao.com/search?keyword=官方回应消防栓没水致男子母亲呛死)
 1. [安徽男子开小型飞机带女儿回家过年](https://so.toutiao.com/search?keyword=安徽男子开小型飞机带女儿回家过年)
-1. [男子爬乐山大佛做不雅动作 景区回应](https://so.toutiao.com/search?keyword=男子爬乐山大佛做不雅动作+景区回应)
-1. [美国男子将父亲斩首开直播号召革命](https://so.toutiao.com/search?keyword=美国男子将父亲斩首开直播号召革命)
-1. [“辽宁铁岭药厂发生爆炸”系谣言](https://so.toutiao.com/search?keyword=“辽宁铁岭药厂发生爆炸”系谣言)
+1. [河南一男生遭多人拿棍棒皮带群殴](https://so.toutiao.com/search?keyword=河南一男生遭多人拿棍棒皮带群殴)
+1. [美国得州进入战争状态？误导](https://so.toutiao.com/search?keyword=美国得州进入战争状态？误导)
 1. [重庆姐弟坠亡案2名罪犯被执行死刑](https://so.toutiao.com/search?keyword=重庆姐弟坠亡案2名罪犯被执行死刑)
 1. [河北农大回应加塞骂人奔驰车主身份](https://so.toutiao.com/search?keyword=河北农大回应加塞骂人奔驰车主身份)
 1. [官方回应副局长与女教师车内死亡](https://so.toutiao.com/search?keyword=官方回应副局长与女教师车内死亡)
 1. [坠亡姐弟生母收到执行消息痛哭](https://so.toutiao.com/search?keyword=坠亡姐弟生母收到执行消息痛哭)
 1. [与辉同行60万张电影代金券被抢空](https://so.toutiao.com/search?keyword=与辉同行60万张电影代金券被抢空)
-1. [丁肇中回应诺贝尔奖颁奖礼用中文演讲](https://so.toutiao.com/search?keyword=丁肇中回应诺贝尔奖颁奖礼用中文演讲)
-1. [村民办酒席前请客聚餐致一死两伤](https://so.toutiao.com/search?keyword=村民办酒席前请客聚餐致一死两伤)
-1. [网友香港偶遇狄龙被追着给红包](https://so.toutiao.com/search?keyword=网友香港偶遇狄龙被追着给红包)
-1. [年轻人不肯为李维斯买单了](https://so.toutiao.com/search?keyword=年轻人不肯为李维斯买单了)
-1. [酒店回应田朴珺吐槽床单有血](https://so.toutiao.com/search?keyword=酒店回应田朴珺吐槽床单有血)
-1. [医疗博主发女患者隐私部位被罚](https://so.toutiao.com/search?keyword=医疗博主发女患者隐私部位被罚)
-1. [茅台集团2023年利润总额1083.5亿元](https://so.toutiao.com/search?keyword=茅台集团2023年利润总额1083.5亿元)
+1. [两船在菲海域相撞致4名中国人受伤](https://so.toutiao.com/search?keyword=两船在菲海域相撞致4名中国人受伤)
+1. [亚洲杯1/4决赛对战出炉](https://so.toutiao.com/search?keyword=亚洲杯1/4决赛对战出炉)
+1. [男子爬乐山大佛做不雅动作 景区通报](https://so.toutiao.com/search?keyword=男子爬乐山大佛做不雅动作+景区通报)
+1. [美国男子将父亲斩首开直播号召革命](https://so.toutiao.com/search?keyword=美国男子将父亲斩首开直播号召革命)
+1. [落马女州长直言关停企业会影响亲属](https://so.toutiao.com/search?keyword=落马女州长直言关停企业会影响亲属)
 1. [吴晓求：股市出状况不全怪监管部门](https://so.toutiao.com/search?keyword=吴晓求：股市出状况不全怪监管部门)
-1. [演员吴旭东患肿瘤 面临保命还是保腿](https://so.toutiao.com/search?keyword=演员吴旭东患肿瘤+面临保命还是保腿)
-1. [媒体：雷蒙多又向中国电动车泼脏水](https://so.toutiao.com/search?keyword=媒体：雷蒙多又向中国电动车泼脏水)
-1. [国台办回应特朗普涉台言论](https://so.toutiao.com/search?keyword=国台办回应特朗普涉台言论)
-1. [上海禁止网约车在浦东机场运营](https://so.toutiao.com/search?keyword=上海禁止网约车在浦东机场运营)
-1. [2024年房地产走势如何](https://so.toutiao.com/search?keyword=2024年房地产走势如何)
-1. [为何中国人不再热衷欧美日韩游](https://so.toutiao.com/search?keyword=为何中国人不再热衷欧美日韩游)
 1. [山东一医院院长绝食以减欠薪愧疚](https://so.toutiao.com/search?keyword=山东一医院院长绝食以减欠薪愧疚)
+1. [年轻人不肯为李维斯买单了](https://so.toutiao.com/search?keyword=年轻人不肯为李维斯买单了)
+1. [茅台集团2023年利润总额1083.5亿元](https://so.toutiao.com/search?keyword=茅台集团2023年利润总额1083.5亿元)
+1. [村民办酒席前请客聚餐致一死两伤](https://so.toutiao.com/search?keyword=村民办酒席前请客聚餐致一死两伤)
 1. [网友称一服务区充电桩价格比加油贵](https://so.toutiao.com/search?keyword=网友称一服务区充电桩价格比加油贵)
-1. [索贿36万的80后女党委书记哭泣出镜](https://so.toutiao.com/search?keyword=索贿36万的80后女党委书记哭泣出镜)
-1. [商场放《恭喜发财》需要给刘德华钱吗](https://so.toutiao.com/search?keyword=商场放《恭喜发财》需要给刘德华钱吗)
-1. [河南一男生遭多人拿棍棒皮带群殴](https://so.toutiao.com/search?keyword=河南一男生遭多人拿棍棒皮带群殴)
-1. [公司花20万从哈尔滨运3车雪到广州](https://so.toutiao.com/search?keyword=公司花20万从哈尔滨运3车雪到广州)
-1. [印度外长苏杰生谈中印关系](https://so.toutiao.com/search?keyword=印度外长苏杰生谈中印关系)
-1. [小区内建“祠堂”业主纷纷要卖房](https://so.toutiao.com/search?keyword=小区内建“祠堂”业主纷纷要卖房)
-1. [女子得知丈夫高坠崩溃：他已离世](https://so.toutiao.com/search?keyword=女子得知丈夫高坠崩溃：他已离世)
-1. [格力值得长期持有吗](https://so.toutiao.com/search?keyword=格力值得长期持有吗)
+1. [上海禁止网约车在浦东机场运营](https://so.toutiao.com/search?keyword=上海禁止网约车在浦东机场运营)
+1. [演员吴旭东患肿瘤 面临保命还是保腿](https://so.toutiao.com/search?keyword=演员吴旭东患肿瘤+面临保命还是保腿)
+1. [网友香港偶遇狄龙被追着给红包](https://so.toutiao.com/search?keyword=网友香港偶遇狄龙被追着给红包)
 1. [网友在飞机上拍下郑州上空云层](https://so.toutiao.com/search?keyword=网友在飞机上拍下郑州上空云层)
-1. [曝泽连斯基要求乌军总司令辞职被拒](https://so.toutiao.com/search?keyword=曝泽连斯基要求乌军总司令辞职被拒)
+1. [努涅斯四次中框 利物浦4-1切尔西](https://so.toutiao.com/search?keyword=努涅斯四次中框+利物浦4-1切尔西)
+1. [为何中国人不再热衷欧美日韩游](https://so.toutiao.com/search?keyword=为何中国人不再热衷欧美日韩游)
+1. [2024年房地产走势如何](https://so.toutiao.com/search?keyword=2024年房地产走势如何)
+1. [50多岁大叔手被冻伤手指发黑](https://so.toutiao.com/search?keyword=50多岁大叔手被冻伤手指发黑)
+1. [宝宝去消防站探望爸爸成“玩具”](https://so.toutiao.com/search?keyword=宝宝去消防站探望爸爸成“玩具”)
+1. [医疗博主发女患者隐私部位被罚](https://so.toutiao.com/search?keyword=医疗博主发女患者隐私部位被罚)
+1. [女子得知丈夫高坠崩溃：他已离世](https://so.toutiao.com/search?keyword=女子得知丈夫高坠崩溃：他已离世)
+1. [申通对发往12个省份的部分快件提价](https://so.toutiao.com/search?keyword=申通对发往12个省份的部分快件提价)
+1. [小区内建“祠堂”业主纷纷要卖房](https://so.toutiao.com/search?keyword=小区内建“祠堂”业主纷纷要卖房)
+1. [国台办回应特朗普涉台言论](https://so.toutiao.com/search?keyword=国台办回应特朗普涉台言论)
+1. [印度外长苏杰生谈中印关系](https://so.toutiao.com/search?keyword=印度外长苏杰生谈中印关系)
+1. [大学生逛街看中卫衣1500元](https://so.toutiao.com/search?keyword=大学生逛街看中卫衣1500元)
+1. [各地多部门联动积极应对寒潮来袭](https://so.toutiao.com/search?keyword=各地多部门联动积极应对寒潮来袭)
 1. [美国反战组织：佩洛西涉华言论可耻](https://so.toutiao.com/search?keyword=美国反战组织：佩洛西涉华言论可耻)
+1. [酒店回应田朴珺吐槽床单有血](https://so.toutiao.com/search?keyword=酒店回应田朴珺吐槽床单有血)
+1. [商场放《恭喜发财》需要给刘德华钱吗](https://so.toutiao.com/search?keyword=商场放《恭喜发财》需要给刘德华钱吗)
+1. [研究发现心跳快慢与寿命长短相关](https://so.toutiao.com/search?keyword=研究发现心跳快慢与寿命长短相关)
+1. [丁肇中回应诺贝尔奖颁奖礼用中文演讲](https://so.toutiao.com/search?keyword=丁肇中回应诺贝尔奖颁奖礼用中文演讲)
+1. [索贿36万的80后女党委书记哭泣出镜](https://so.toutiao.com/search?keyword=索贿36万的80后女党委书记哭泣出镜)
+1. [俄不打算与日本就和平条约进行谈判](https://so.toutiao.com/search?keyword=俄不打算与日本就和平条约进行谈判)
+1. [男子爬乐山大佛做不雅动作 景区回应](https://so.toutiao.com/search?keyword=男子爬乐山大佛做不雅动作+景区回应)
+1. [“辽宁铁岭药厂发生爆炸”系谣言](https://so.toutiao.com/search?keyword=“辽宁铁岭药厂发生爆炸”系谣言)
+1. [媒体：雷蒙多又向中国电动车泼脏水](https://so.toutiao.com/search?keyword=媒体：雷蒙多又向中国电动车泼脏水)
+1. [公司花20万从哈尔滨运3车雪到广州](https://so.toutiao.com/search?keyword=公司花20万从哈尔滨运3车雪到广州)
+1. [格力值得长期持有吗](https://so.toutiao.com/search?keyword=格力值得长期持有吗)
+1. [曝泽连斯基要求乌军总司令辞职被拒](https://so.toutiao.com/search?keyword=曝泽连斯基要求乌军总司令辞职被拒)
 1. [快递是否应送到家门口](https://so.toutiao.com/search?keyword=快递是否应送到家门口)
 1. [日本一核电站变压器因能登地震受损](https://so.toutiao.com/search?keyword=日本一核电站变压器因能登地震受损)
 1. [外交部提醒中国公民避免卷入冲突](https://so.toutiao.com/search?keyword=外交部提醒中国公民避免卷入冲突)
