--- a/archives/toutiao-search/2024-02-01.md
+++ b/archives/toutiao-search/2024-02-01.md
@@ -1,66 +1,83 @@
 # 2024-02-01
 
-共 178 条
+共 192 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 01 2024 13:00:51 GMT+0800 (China Standard Time) -->
-1. [刘德华和董宇辉谁才是“流量之王”](https://so.toutiao.com/search?keyword=刘德华和董宇辉谁才是“流量之王”)
-1. [河南一高速五六十辆车连环相撞](https://so.toutiao.com/search?keyword=河南一高速五六十辆车连环相撞)
-1. [4架C919国产大飞机首度服务春运](https://so.toutiao.com/search?keyword=4架C919国产大飞机首度服务春运)
-1. [刘德华也无法避免沟通困境](https://so.toutiao.com/search?keyword=刘德华也无法避免沟通困境)
-1. [河南今冬最强降雪：积雪脚脖子深](https://so.toutiao.com/search?keyword=河南今冬最强降雪：积雪脚脖子深)
-1. [女子自行摸索在家给丈夫剪头发3年](https://so.toutiao.com/search?keyword=女子自行摸索在家给丈夫剪头发3年)
-1. [创可贴和创口贴有啥区别](https://so.toutiao.com/search?keyword=创可贴和创口贴有啥区别)
-1. [直击河南今冬最强降雪](https://so.toutiao.com/search?keyword=直击河南今冬最强降雪)
+<!-- 最后更新时间 Thu Feb 01 2024 14:07:19 GMT+0800 (China Standard Time) -->
 1. [央媒评村民办酒席被撒盐：简单粗暴](https://so.toutiao.com/search?keyword=央媒评村民办酒席被撒盐：简单粗暴)
-1. [复旦一教师杀害学院书记被判死缓](https://so.toutiao.com/search?keyword=复旦一教师杀害学院书记被判死缓)
+1. [创可贴和创口贴有啥区别](https://so.toutiao.com/search?keyword=创可贴和创口贴有啥区别)
+1. [4架C919国产大飞机首度服务春运](https://so.toutiao.com/search?keyword=4架C919国产大飞机首度服务春运)
+1. [河南今冬最强降雪：积雪脚脖子深](https://so.toutiao.com/search?keyword=河南今冬最强降雪：积雪脚脖子深)
+1. [刘德华也无法避免沟通困境](https://so.toutiao.com/search?keyword=刘德华也无法避免沟通困境)
+1. [媒体：中缅边境决不允许有黑道家族](https://so.toutiao.com/search?keyword=媒体：中缅边境决不允许有黑道家族)
+1. [韩国瑜当选台新任立法机构负责人](https://so.toutiao.com/search?keyword=韩国瑜当选台新任立法机构负责人)
+1. [直击河南今冬最强降雪](https://so.toutiao.com/search?keyword=直击河南今冬最强降雪)
+1. [刘德华和董宇辉谁才是“流量之王”](https://so.toutiao.com/search?keyword=刘德华和董宇辉谁才是“流量之王”)
+1. [安徽男子开小型飞机带女儿回家过年](https://so.toutiao.com/search?keyword=安徽男子开小型飞机带女儿回家过年)
 1. [北京产权交易所：与外企CBEX无合作](https://so.toutiao.com/search?keyword=北京产权交易所：与外企CBEX无合作)
 1. [村民办席被往饭菜中撒盐 官方通报](https://so.toutiao.com/search?keyword=村民办席被往饭菜中撒盐+官方通报)
-1. [坠亡姐弟生母收到执行消息痛哭](https://so.toutiao.com/search?keyword=坠亡姐弟生母收到执行消息痛哭)
 1. [河北农大回应加塞骂人奔驰车主身份](https://so.toutiao.com/search?keyword=河北农大回应加塞骂人奔驰车主身份)
-1. [伦纳德31+9+4 快船客场轻取奇才](https://so.toutiao.com/search?keyword=伦纳德31+9+4+快船客场轻取奇才)
+1. [复旦一教师杀害学院书记被判死缓](https://so.toutiao.com/search?keyword=复旦一教师杀害学院书记被判死缓)
 1. [男子爬乐山大佛头顶小便 景区通报](https://so.toutiao.com/search?keyword=男子爬乐山大佛头顶小便+景区通报)
-1. [安徽男子开小型飞机带女儿回家过年](https://so.toutiao.com/search?keyword=安徽男子开小型飞机带女儿回家过年)
+1. [小米副董事长从北京开SU7去深圳](https://so.toutiao.com/search?keyword=小米副董事长从北京开SU7去深圳)
+1. [CT换家医院不认 患者吐槽费钱费时](https://so.toutiao.com/search?keyword=CT换家医院不认+患者吐槽费钱费时)
+1. [落马80后女干部曾扬言：谁能干过我](https://so.toutiao.com/search?keyword=落马80后女干部曾扬言：谁能干过我)
 1. [山东一医院院长绝食以减欠薪愧疚](https://so.toutiao.com/search?keyword=山东一医院院长绝食以减欠薪愧疚)
+1. [汕头死鲸排气现场](https://so.toutiao.com/search?keyword=汕头死鲸排气现场)
+1. [贵州女生吐槽一天吃5场酒席](https://so.toutiao.com/search?keyword=贵州女生吐槽一天吃5场酒席)
+1. [财政部：2024财政收入将恢复性增长](https://so.toutiao.com/search?keyword=财政部：2024财政收入将恢复性增长)
+1. [上海一楼房凌晨发生坍塌](https://so.toutiao.com/search?keyword=上海一楼房凌晨发生坍塌)
+1. [哈登：不管打谁我们都有正确的方式](https://so.toutiao.com/search?keyword=哈登：不管打谁我们都有正确的方式)
+1. [河南一高速五六十辆车连环相撞](https://so.toutiao.com/search?keyword=河南一高速五六十辆车连环相撞)
+1. [网友称一服务区充电桩价格比加油贵](https://so.toutiao.com/search?keyword=网友称一服务区充电桩价格比加油贵)
+1. [商场放《恭喜发财》需要给刘德华钱吗](https://so.toutiao.com/search?keyword=商场放《恭喜发财》需要给刘德华钱吗)
+1. [女子开老年代步车违法上高速](https://so.toutiao.com/search?keyword=女子开老年代步车违法上高速)
+1. [美军F-18空袭也门摧毁10架无人机](https://so.toutiao.com/search?keyword=美军F-18空袭也门摧毁10架无人机)
+1. [公司花20万从哈尔滨运3车雪到广州](https://so.toutiao.com/search?keyword=公司花20万从哈尔滨运3车雪到广州)
+1. [纪委干部被指在妻子怀孕时出轨多人](https://so.toutiao.com/search?keyword=纪委干部被指在妻子怀孕时出轨多人)
+1. [女子自行摸索在家给丈夫剪头发3年](https://so.toutiao.com/search?keyword=女子自行摸索在家给丈夫剪头发3年)
+1. [律师：吴谢宇案定罪量刑没问题](https://so.toutiao.com/search?keyword=律师：吴谢宇案定罪量刑没问题)
+1. [河南一男生遭多人拿棍棒皮带群殴](https://so.toutiao.com/search?keyword=河南一男生遭多人拿棍棒皮带群殴)
+1. [世界名帅自荐主帅 国足有希望了吗](https://so.toutiao.com/search?keyword=世界名帅自荐主帅+国足有希望了吗)
+1. [两船在菲海域相撞致4名中国人受伤](https://so.toutiao.com/search?keyword=两船在菲海域相撞致4名中国人受伤)
+1. [多家地方银行上调存款利率](https://so.toutiao.com/search?keyword=多家地方银行上调存款利率)
+1. [副县长为升迁送市委书记儿子百万](https://so.toutiao.com/search?keyword=副县长为升迁送市委书记儿子百万)
+1. [熊猫血大哥为献血戒烟酒戒火锅17年](https://so.toutiao.com/search?keyword=熊猫血大哥为献血戒烟酒戒火锅17年)
+1. [在高铁上发疯的年轻人](https://so.toutiao.com/search?keyword=在高铁上发疯的年轻人)
+1. [宝宝去消防站探望爸爸成“玩具”](https://so.toutiao.com/search?keyword=宝宝去消防站探望爸爸成“玩具”)
+1. [医疗博主发女患者隐私部位被罚](https://so.toutiao.com/search?keyword=医疗博主发女患者隐私部位被罚)
+1. [女子上厕所没纸报警 被拒后投诉遭怼](https://so.toutiao.com/search?keyword=女子上厕所没纸报警+被拒后投诉遭怼)
+1. [演员吴旭东患肿瘤 面临保命还是保腿](https://so.toutiao.com/search?keyword=演员吴旭东患肿瘤+面临保命还是保腿)
+1. [美国男子将父亲斩首开直播号召革命](https://so.toutiao.com/search?keyword=美国男子将父亲斩首开直播号召革命)
+1. [小区内建“祠堂”业主纷纷要卖房](https://so.toutiao.com/search?keyword=小区内建“祠堂”业主纷纷要卖房)
+1. [财政部：拟靠前安排发行国债](https://so.toutiao.com/search?keyword=财政部：拟靠前安排发行国债)
+1. [哈登谈NBA将公布全明星替补阵容](https://so.toutiao.com/search?keyword=哈登谈NBA将公布全明星替补阵容)
+1. [网友建议过年取消走亲访友](https://so.toutiao.com/search?keyword=网友建议过年取消走亲访友)
+1. [王者荣耀限时点券回归](https://so.toutiao.com/search?keyword=王者荣耀限时点券回归)
+1. [坠亡姐弟生母收到执行消息痛哭](https://so.toutiao.com/search?keyword=坠亡姐弟生母收到执行消息痛哭)
+1. [伦纳德31+9+4 快船客场轻取奇才](https://so.toutiao.com/search?keyword=伦纳德31+9+4+快船客场轻取奇才)
 1. [50多岁大叔手被冻伤手指发黑](https://so.toutiao.com/search?keyword=50多岁大叔手被冻伤手指发黑)
 1. [财政部：养老金能保证按时足额发放](https://so.toutiao.com/search?keyword=财政部：养老金能保证按时足额发放)
-1. [在高铁上发疯的年轻人](https://so.toutiao.com/search?keyword=在高铁上发疯的年轻人)
 1. [教授李玲：医保制度一定要改](https://so.toutiao.com/search?keyword=教授李玲：医保制度一定要改)
-1. [落马80后女干部曾扬言：谁能干过我](https://so.toutiao.com/search?keyword=落马80后女干部曾扬言：谁能干过我)
 1. [董宇辉给刘德华念“小作文”了](https://so.toutiao.com/search?keyword=董宇辉给刘德华念“小作文”了)
 1. [菲律宾总统称与副总统之间没有裂痕](https://so.toutiao.com/search?keyword=菲律宾总统称与副总统之间没有裂痕)
-1. [上海一楼房凌晨发生坍塌](https://so.toutiao.com/search?keyword=上海一楼房凌晨发生坍塌)
-1. [媒体：中缅边境决不允许有黑道家族](https://so.toutiao.com/search?keyword=媒体：中缅边境决不允许有黑道家族)
-1. [商场放《恭喜发财》需要给刘德华钱吗](https://so.toutiao.com/search?keyword=商场放《恭喜发财》需要给刘德华钱吗)
-1. [副县长为升迁送市委书记儿子百万](https://so.toutiao.com/search?keyword=副县长为升迁送市委书记儿子百万)
-1. [世界名帅自荐主帅 国足有希望了吗](https://so.toutiao.com/search?keyword=世界名帅自荐主帅+国足有希望了吗)
 1. [茅台集团2023年利润总额1083.5亿元](https://so.toutiao.com/search?keyword=茅台集团2023年利润总额1083.5亿元)
 1. [快船一月份战绩为12胜3负](https://so.toutiao.com/search?keyword=快船一月份战绩为12胜3负)
 1. [午评：创业板指涨近2%](https://so.toutiao.com/search?keyword=午评：创业板指涨近2%)
 1. [各部门应急联动除雪备战](https://so.toutiao.com/search?keyword=各部门应急联动除雪备战)
-1. [女子开老年代步车违法上高速](https://so.toutiao.com/search?keyword=女子开老年代步车违法上高速)
-1. [网友称一服务区充电桩价格比加油贵](https://so.toutiao.com/search?keyword=网友称一服务区充电桩价格比加油贵)
-1. [河南一男生遭多人拿棍棒皮带群殴](https://so.toutiao.com/search?keyword=河南一男生遭多人拿棍棒皮带群殴)
-1. [小区内建“祠堂”业主纷纷要卖房](https://so.toutiao.com/search?keyword=小区内建“祠堂”业主纷纷要卖房)
 1. [三卡车哈尔滨的雪已运抵广州](https://so.toutiao.com/search?keyword=三卡车哈尔滨的雪已运抵广州)
 1. [河南高速除雪车融雪剂整装待发](https://so.toutiao.com/search?keyword=河南高速除雪车融雪剂整装待发)
 1. [美专家：美国不应直接打击伊朗](https://so.toutiao.com/search?keyword=美专家：美国不应直接打击伊朗)
 1. [杨澜对话丁肇中先生](https://so.toutiao.com/search?keyword=杨澜对话丁肇中先生)
 1. [224名以军死于加沙地面军事行动](https://so.toutiao.com/search?keyword=224名以军死于加沙地面军事行动)
-1. [演员吴旭东患肿瘤 面临保命还是保腿](https://so.toutiao.com/search?keyword=演员吴旭东患肿瘤+面临保命还是保腿)
 1. [俄罗斯防长绍伊古用中文向董军问好](https://so.toutiao.com/search?keyword=俄罗斯防长绍伊古用中文向董军问好)
-1. [美国男子将父亲斩首开直播号召革命](https://so.toutiao.com/search?keyword=美国男子将父亲斩首开直播号召革命)
-1. [医疗博主发女患者隐私部位被罚](https://so.toutiao.com/search?keyword=医疗博主发女患者隐私部位被罚)
-1. [两船在菲海域相撞致4名中国人受伤](https://so.toutiao.com/search?keyword=两船在菲海域相撞致4名中国人受伤)
 1. [禁止网约车在浦东机场运营合法吗](https://so.toutiao.com/search?keyword=禁止网约车在浦东机场运营合法吗)
 1. [本轮冻雨影响面积将达43万平方公里](https://so.toutiao.com/search?keyword=本轮冻雨影响面积将达43万平方公里)
 1. [张波叶诚尘死刑前会见了亲属](https://so.toutiao.com/search?keyword=张波叶诚尘死刑前会见了亲属)
 1. [官方回应副局长与女教师车内死亡](https://so.toutiao.com/search?keyword=官方回应副局长与女教师车内死亡)
-1. [贵州女生吐槽一天吃5场酒席](https://so.toutiao.com/search?keyword=贵州女生吐槽一天吃5场酒席)
 1. [《红毯先生》30万张票十分钟抢光](https://so.toutiao.com/search?keyword=《红毯先生》30万张票十分钟抢光)
 1. [董宇辉对刘德华说想演兵马俑](https://so.toutiao.com/search?keyword=董宇辉对刘德华说想演兵马俑)
 1. [大陆优化M503航线影响几何](https://so.toutiao.com/search?keyword=大陆优化M503航线影响几何)
-1. [宝宝去消防站探望爸爸成“玩具”](https://so.toutiao.com/search?keyword=宝宝去消防站探望爸爸成“玩具”)
 1. [伊朗宣布对28个国家单方面免签](https://so.toutiao.com/search?keyword=伊朗宣布对28个国家单方面免签)
 1. [2024年房地产走势如何](https://so.toutiao.com/search?keyword=2024年房地产走势如何)
 1. [年轻人不肯为李维斯买单了](https://so.toutiao.com/search?keyword=年轻人不肯为李维斯买单了)
@@ -69,7 +86,6 @@
 1. [分析师：鲍威尔未排除3月降息可能](https://so.toutiao.com/search?keyword=分析师：鲍威尔未排除3月降息可能)
 1. [过年了爸妈到底想要啥](https://so.toutiao.com/search?keyword=过年了爸妈到底想要啥)
 1. [女子得知丈夫高坠崩溃：他已离世](https://so.toutiao.com/search?keyword=女子得知丈夫高坠崩溃：他已离世)
-1. [熊猫血大哥为献血戒烟酒戒火锅17年](https://so.toutiao.com/search?keyword=熊猫血大哥为献血戒烟酒戒火锅17年)
 1. [俄乌交换一批被俘人员](https://so.toutiao.com/search?keyword=俄乌交换一批被俘人员)
 1. [国新办介绍2023年财政收支情况](https://so.toutiao.com/search?keyword=国新办介绍2023年财政收支情况)
 1. [重庆姐弟坠亡案2名罪犯被执行死刑](https://so.toutiao.com/search?keyword=重庆姐弟坠亡案2名罪犯被执行死刑)
@@ -78,7 +94,6 @@
 1. [王世坚谈在“立院”会否对决韩国瑜](https://so.toutiao.com/search?keyword=王世坚谈在“立院”会否对决韩国瑜)
 1. [京沪楼市政策调整效果如何](https://so.toutiao.com/search?keyword=京沪楼市政策调整效果如何)
 1. [16年来最强春运雨雪启动](https://so.toutiao.com/search?keyword=16年来最强春运雨雪启动)
-1. [多家地方银行上调存款利率](https://so.toutiao.com/search?keyword=多家地方银行上调存款利率)
 1. [国台办回应特朗普涉台言论](https://so.toutiao.com/search?keyword=国台办回应特朗普涉台言论)
 1. [大学生逛街看中卫衣1500元](https://so.toutiao.com/search?keyword=大学生逛街看中卫衣1500元)
 1. [胡塞武装称在亚丁湾袭击美国货轮](https://so.toutiao.com/search?keyword=胡塞武装称在亚丁湾袭击美国货轮)
@@ -124,7 +139,6 @@
 1. [男子爬乐山大佛做不雅动作 景区回应](https://so.toutiao.com/search?keyword=男子爬乐山大佛做不雅动作+景区回应)
 1. [“辽宁铁岭药厂发生爆炸”系谣言](https://so.toutiao.com/search?keyword=“辽宁铁岭药厂发生爆炸”系谣言)
 1. [媒体：雷蒙多又向中国电动车泼脏水](https://so.toutiao.com/search?keyword=媒体：雷蒙多又向中国电动车泼脏水)
-1. [公司花20万从哈尔滨运3车雪到广州](https://so.toutiao.com/search?keyword=公司花20万从哈尔滨运3车雪到广州)
 1. [格力值得长期持有吗](https://so.toutiao.com/search?keyword=格力值得长期持有吗)
 1. [曝泽连斯基要求乌军总司令辞职被拒](https://so.toutiao.com/search?keyword=曝泽连斯基要求乌军总司令辞职被拒)
 1. [日本一核电站变压器因能登地震受损](https://so.toutiao.com/search?keyword=日本一核电站变压器因能登地震受损)
